--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Agregar" />
+        <TextView
+            android:id="@+id/lat"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:gravity="bottom|center_horizontal|end"
+            android:textAlignment="textEnd"
+            android:textColor="@android:color/black"
+            android:textSize="40sp" />
+        <TextView
+            android:id="@+id/lon"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:gravity="bottom|center_horizontal|end"
+            android:textAlignment="textEnd"
+            android:textColor="@android:color/black"
+            android:textSize="40sp" />
         <Button android:id="@+id/btnMover"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
